src/objects/Application_Interface__c.object
<CustomObject>
    <description>This object is for the Project Central - Application Registry application and supports the &quot;Application&quot; object. This object tracks the interfaces amongst the applications.</description>
    <fields>
        <fullName>Application_Version__c</fullName>
        <label>Application Version</label>
        <referenceTo>Application_Version__c</referenceTo>
        <relationshipLabel>Application Interfaces</relationshipLabel>
        <relationshipName>Application_Interfaces</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>System_Name__c</fullName>
        <formula>System__r.Name</formula>
        <label>System Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System</label>
        <referenceTo>System__c</referenceTo>
        <relationshipLabel>Application Interfaces</relationshipLabel>
        <relationshipName>Application_Interfaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sends - Application sends information to other system</fullName>
                </value>
                <value>
                    <fullName>Receives - Application receives information from other system</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application Interface</label>
    <nameField>
        <displayFormat>AI2-{0000000}</displayFormat>
        <label>Application Interface ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Interfaces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>